validation pdf text overlapping issue fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -722,6 +722,9 @@ padding: 0 15px;
 .align-center{
 	align-items: center;
 }
+.align-start{
+	align-items: flex-start;
+}
 .justify-center{
 	justify-content: center;
 }
