--- a/frontend/src/components/Validation/Validation.css
+++ b/frontend/src/components/Validation/Validation.css
@@ -109,6 +109,8 @@
 	color: #636363;
 		
 }
-
+.validation .popup .form-fields{
+  flex: 1 1 30%;
+}
 
 
